--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,7 @@ aiohttp
 aria2p
 hachoir
 Pillow
-pyrogram
+https://github.com/pyrogram/pyrogram/archive/asyncio-dev.zip
 tgcrypto
-git+git://github.com/sudoshell/youtube-dl@master#youtube_dl
+git+git://github.com/FaArIsH/youtube-dl.git
+hurry.filesize
